[tool.pytest.ini_options]
pythonpath = [
  "."
]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py_replay_bg"
version = "1.4.0"
authors = [
  { name="Giacomo Cappon", email="cappongiacomo@gmail.com" },
]
description = "ReplayBG is a digital twin-based methodology to assess new strategies for type 1 diabetes management."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
# Direct runtime dependencies only. Transitive packages (e.g. statsmodels,
# openpyxl, scikit-learn, pillow, llvmlite, ...) are resolved automatically by
# pip and must NOT be listed here. Lower bounds track the versions the package
# is tested against; newer compatible releases are allowed.
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.12",
    "matplotlib>=3.8",
    "numba>=0.59",
    "emcee>=3.1",
    "tqdm>=4.66",
    "py-agata>=0.0.8",
]

[project.optional-dependencies]
# Tooling for development, testing and publishing. Install with:
#   pip install -e ".[dev]"
dev = [
    "pytest>=8.1",
    "pytest-cov>=5.0",
    "coverage>=7.4",
    "build>=1.2",
    "twine>=5.0",
]

[project.urls]
"Homepage" = "https://github.com/gcappon/py_replay_bg"
"Bug Tracker" = "https://github.com/gcappon/py_replay_bg/issues"

[tool.setuptools.packages.find]
include = ["py_replay_bg*"]
exclude = ["venv*"]

[tool.setuptools]
license-files = ["COPYING.md"]